working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1679,11 +1679,16 @@
           <p>Stun Scorpion can paralyze you for 3 turns with its special attack. You might lose even in a 1-on-1 fight<br>if you become paralyzed, so don't let your guard down just because other monsters aren't nearby.<br>Note that monsters will have 100% accuracy when they attack Shiren when he is paralyzed,<br>even when they are under the effect of a Miss Staff.</p>
           <p>Walk diagonally inside rooms when you see a red dot but haven't identified what monster is present,<br>since it could be a Gigahead or Emperor Tusker that can attack when you're lined up with it.<br>You made it this far, so do everything you can to try and stay alive.</p>
           <h4 id="floor_86_90">86~90F</h4>
-          <p></p>
+          <p>The monster table still includes Hyper Gazer and Shihan, so consider waiting until 91F<br>before throwing an Extinction Scroll so that you don't indirectly increase their appearance rate.<br>If you don't have the 山 (Echo Shield) seal, you'll want to be extra careful around Hyper Gazers.</p>
+          <p>King Tusker (86~89F) and Monarch Tusker (88~90F) make a brief appearance.<br>They're weak on their own, but can cause problems if Shiren is sealed or slowed near stronger monsters.</p>
+          <p>Shops no longer appear after 90F, so keep that in mind if you're aiming for an Upgrade Pot,<br>Super Unlucky Seed, or an 8-digit score using bags of 1,000,000 Gitan.</p>
           <h4 id="floor_90">90F+</h4>
-          <p></p>
+          <p>Cave Mamel (90~99F) shouldn't be too threatening, since it has lower defense in Shiren 2 compared to other games.</p>
+          <p>Shihan and Hyper Gazer no longer appear from 91F, so it's a good time to throw an Extinction Scroll at a monster.<br>The monster you choose should be based on your shield's strength and seals.</p>
+          <p>As you progress further into this floor range, other monsters including Lashaaga, Boulder Beast, Orcaon,<br>and Gottsuan exit the monster table, effectively increasing the appearance rate of other end game monsters<br>like Megataur, Gigahead, Stun Scorpion, Typhoon, and Emperor Tusker. Even regular Monster Houses<br>are terrifying at that point, so try to find ways around them if you come across any.</p>
+          <p>There's a 30% chance for Golden Stairs to be generated inside a wall between 90~95F, so don't forget to<br>read Wall Collapse Scrolls if you're aiming to obtain a Mijinha or Basilisk Shield to complete the gallery.<br>You could transfer your main weapon or shield to either option for fun, if you have a Synthesis Pot on hand.</p>
           <h3 id="floor_end">The End</h3>
-          <p></p>
+          <p>Once you descend the stairs on 99F, you'll arrive at a new location unlike any other in the game.<br>A written description of the area wouldn't be able to fully capture the sight, so it's best to experience it yourself.<br>You'll also obtain a clear icon, special reward, and NPCs inside the udon restaurant will have new dialogue.</p>
           <h2 id="monsters">Monsters</h2>
           <div class="road_to_the_end_monster_table">
             <table>
@@ -6045,13 +6050,79 @@
             </table>
           </div>
           <h2 id="floor_guide">Golden Interval</h2>
-          <p>Text</p>
+          <dl>
+            <dt>Notes that apply to all three Golden Intervals</dt>
+          </dl>
+          <ul>
+            <li>Stronger monsters appear, so be careful not to collapse.</li>
+            <li>Pitfalls and Flood Traps don't get generated.</li>
+            <li><span class="dungeon_desc_warning">Food and Grass items cannot be found on the floor</span>, so be careful of hunger.</li>
+            <ul>
+              <li>Defeat monsters using a weapon with the 飯 (Riceball) seal to obtain food inside Golden Intervals.</li>
+            </ul>
+            <li>Water Pots cannot be refilled.</li>
+            <ul>
+              <li>Techniques involving splashing water on Blank Scrolls or monsters have a limited number of uses.</li>
+              <li>Think carefully before splashing water, especially against Lashaaga and Megataur.</li>
+            </ul>
+            <li>Insert Gitan into Storage Pots, and use Gitan as a projectile to deal with troublesome monsters.</li>
+            <li>Most items found inside Golden Intervals can be sold for a large amount of Gitan.</li>
+            <li>The item table may be small, but powerful items can be found.</li>
+            <ul>
+              <li>Dragon Killer and Dragon Shield are exclusive to Golden Intervals.</li>
+            </ul>
+            <li>Wooden Arrow Traps can be generated, meaning they can be used to replenish arrows.</li>
+          </ul>
           <h3>First (6~10F, Return 11F)</h3>
-          <p></p>
+          <p>It's rare to find Wall Collapse Scrolls this early in the dungeon, so you're unlikely to visit this Golden Interval.<br>That said, if you do get lucky, be sure to explore the entire map on each floor to collect all items.</p>
+          <p>The monster table changes from 3F and includes numerous monsters with ranged attacks.<br>Snacky can also appear, often causing a Horse Ronin or Pop Tank to level up into a Horse Samurai or Cranky Tank.<br>Store Gitan inside of a Storage Pot, and use the Gitan as a projectile to deal with leveled up monsters.<br>You could try to intentionally level one of those monsters up as well, to increase the amount of experience you gain.</p>
+          <p>Dragon Killer and Dragon Shield can only be found in Golden Intervals, and are both powerful pieces of equipment.<br>Dragon Killer surpasses Dotanuki with its 15 base attack and 7 slots, and should be used as a main weapon.<br>Ryujin Sword can be synthesized using 4 Dragon Killers as well, and is the strongest main weapon in this dungeon.<br>If you have a Posession Staff, you can create an Iai on 3~4F and use its special attack to obtain more Dragon Killers.</p>
+          <p>However, note that you'll skip past important floors if you enter this Golden Interval too early:</p>
+          <ul>
+            <li><span class="dungeon_desc_warning">8~9F - Have Nigiri Morph make Large Riceballs for you.</span></li>
+            <li>7~9F - Hunt Mr. Drones for Strength Grass drops.</li>
+            <li>9~10F - Synthesize items using Mixers. (That said, Mixer appears until 15F so it's not too big of a loss).</li>
+          </ul>
+          <p>So the downsides of entering this Golden Interval early cannot be ignored.<br>In particular, there's a high chance of collapsing from starvation if you enter it before making Large Riceballs on 8F.<br>You'll always be returned to 11F when you exit the Golden Interval, no matter what floor you entered it on.<br>So it's best to enter the Golden Interval on either 9F or 10F to limit the downsides as much as possible.</p>
+          <p>Lastly, Heaven Scrolls are common, so you should be able to get by with a Dried Bonito if you have one on hand.<br>Simply read a Heaven Scroll to increase its upgrade value, effectively increasing the number of bites by 1.<br>It's a little wasteful, but it's a technique that can be used without having to synthesize a Desposable Sword,<br>and you can make up for the missed upgrade values on your main weapon by raising your Strength later on.</p>
+          <table class="golden_interval_items">
+            <tr>
+              <th>Category</th>
+              <th>Item Name</th>
+            </tr>
+            <tr>
+              <td>Weapon</td>
+              <td>Ivory Sword, Dragon Killer, Manji-Kabura</td>
+            </tr>
+            <tr>
+              <td>Shield</td>
+              <td>Ivory Shield, Dragon Shield, Happy Shield</td>
+            </tr>
+            <tr>
+              <td>Bracelet</td>
+              <td>No Control Bracelet (Shihan)</td>
+            </tr>
+            <tr>
+              <td>Scroll</td>
+              <td>Heaven Scroll, Earth Scroll, Identify Scroll</td>
+            </tr>
+            <tr>
+              <td>Pot</td>
+              <td>Storage Pot, Surprise Pot</td>
+            </tr>
+            <tr>
+              <td>Gitan</td>
+              <td>10~2000 Gitan</td>
+            </tr>
+            <tr>
+              <td>Treasure</td>
+              <td>Golden Sword, Golden Shield, Wooden Shield, Happy Shield, Evasive Shield,<br>Echo Shield, Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
+            </tr>
+          </table>
           <h3>Second (24~29F, Return 30F)</h3>
-          <p></p>
+          <p>Text</p>
           <h3>Third (90~95F, Return 95F)</h3>
-          <p></p>
+          <p>Text</p>
           <h2 id="floor_guide">Speed Running</h2>
           <p>Text</p>
         </div>
