working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -114,6 +114,7 @@
                   <li><a href="#golden_interval">Shop + Trader</a></li>
                 </ul>
                 <li><a href="#golden_interval">Golden Interval</a></li>
+                <li><a href="#golden_interval">High Score</a></li>
                 <li><a href="#golden_interval">Speed Running</a></li>
               </ul>
             </div>
@@ -6084,7 +6085,7 @@
             <li>9~10F - Synthesize items using Mixers. (That said, Mixer appears until 15F so it's not too big of a loss).</li>
           </ul>
           <p>So the downsides of entering this Golden Interval early cannot be ignored.<br>In particular, there's a high chance of collapsing from starvation if you enter it before making Large Riceballs on 8F.<br>You'll always be returned to 11F when you exit the Golden Interval, no matter what floor you entered it on.<br>So it's best to enter the Golden Interval on either 9F or 10F to limit the downsides as much as possible.</p>
-          <p>Lastly, Heaven Scrolls are common, so you should be able to get by with a Dried Bonito if you have one on hand.<br>Simply read a Heaven Scroll to increase its upgrade value, effectively increasing the number of bites by 1.<br>It's a little wasteful, but it's a technique that can be used without having to synthesize a Desposable Sword,<br>and you can make up for the missed upgrade values on your main weapon by raising your Strength later on.</p>
+          <p>Lastly, Heaven Scrolls are common, so you can get by with a Dried Bonito if you have one on hand.<br>Simply read a Heaven Scroll while it's equipped to increase its upgrade value and number of bites by 1.<br>It's a little wasteful, but it's a technique that can be used without having to synthesize a Disposable Sword,<br>and you can make up for the missed upgrade values on your main weapon by raising your Strength later on.</p>
           <table class="golden_interval_items">
             <tr>
               <th>Category</th>
@@ -6120,11 +6121,124 @@
             </tr>
           </table>
           <h3>Second (24~29F, Return 30F)</h3>
-          <p>Text</p>
+          <p>Golden Interval that can have a drastic effect on how the rest of the dungeon progresses.<br>In particular, this is the last chance to obtain equipment effective against Dragon type monsters.<br>Archdragon will likely give you trouble if you fail to obtain a Dragon Shield and don't have an Extinction Scroll.</p>
+          <p>Dragon, Sky Dragon, and Skull Dragon appear on 1~2F, and <span class="dungeon_desc_warning">Lashaaga</span> is added to the monster table on 3~4F.<br>Lashaaga normally appears on 70F+ inside this dungeon, and is far stronger than anything you've seen so far.<br>Keep multiple bags of 1000+ Gitan inside a Storage Pot to use as a projectile to one-shot it,<br>or use an item such as Miss Staff to weaken it first before using regular attacks.<br>You might have a chance of defeating it without items if you have a Dragon Killer,<br>along with a shield with the 見 (Evasive Shield) and 眠 (Slumber Scroll) seals.<br>If you don't have a way to deal with Lashaaga, it's best to hurry through 3~4F to limit the number of encounters.</p>
+          <p>The item table is the same as the first Golden Interval. Surprise Pots can contain items from multiple categories.<br>Lashaaga doesn't spawn on 1~2F, so you can safely linger for experience points and additional item drops.<br>An ally Armordillo Pop or Iai can be used to gather Dragon Killers for a Ryujin Sword as well.</p>
+          <p>Dragon and Sky Dragon have high item drop rates, so you're very likely to obtain additional items if you linger.<br>Monster traps can be used to generate more monsters, and a Sanctuary Scroll can be placed on the ground<br>on 3~4F to safely hunt monsters until the wind blows.<br>Arrow traps can be found in this Golden Interval, so it's a good idea to gather arrows if you happen to find one.</p>
+          <table class="golden_interval_items">
+            <tr>
+              <th>Category</th>
+              <th>Item Name</th>
+            </tr>
+            <tr>
+              <td>Weapon</td>
+              <td>Ivory Sword, Dragon Killer, Manji-Kabura</td>
+            </tr>
+            <tr>
+              <td>Shield</td>
+              <td>Ivory Shield, Dragon Shield, Happy Shield</td>
+            </tr>
+            <tr>
+              <td>Bracelet</td>
+              <td>No Control Bracelet (Shihan)</td>
+            </tr>
+            <tr>
+              <td>Scroll</td>
+              <td>Heaven Scroll, Earth Scroll, Identify Scroll</td>
+            </tr>
+            <tr>
+              <td>Pot</td>
+              <td>Storage Pot, Surprise Pot</td>
+            </tr>
+            <tr>
+              <td>Gitan</td>
+              <td>10~2000 Gitan</td>
+            </tr>
+            <tr>
+              <td>Treasure</td>
+              <td>Golden Sword, Golden Shield, Wooden Shield, Evasive Shield, Echo Shield,<br>Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
+            </tr>
+          </table>
           <h3>Third (90~95F, Return 95F)</h3>
-          <p>Text</p>
+          <p>You're nearly guaranteed to find this Golden Interval if you read a Wall Collapse Scroll on each of the 6 floors.<br>You'll be returned to 95F afterward, so there's a small chance to find another one as well.</p>
+          <p>Basilisk Shield can rarely be found on the ground, and the treasure chest is guaranteed to contain a Mijinha.<br>Mixergon no longer appears at this point, so you'll need a Synthesis Pot if you want to transfer equipment.<br>Both items are exclusively found inside this third Golden Interval of this dungeon.</p>
+          <p>Megataur, Gigahead, and Emperor Tusker are the only monsters inside this Golden Interval.<br>All three have high offensive and defensive stats, so don't let your guard down while searching for items.<br>These monsters all have a fixed item drop, so the only way to obtain additional Basilisk Shields<br>would be to bring an ally Armordillo or Kengo family monster inside. If you do so, Shiren should stand<br>next to the enemy monster to ensure the enemy monster doesn't defeat the ally monster.</p>
+          <table class="golden_interval_items">
+            <tr>
+              <th>Category</th>
+              <th>Item Name</th>
+            </tr>
+            <tr>
+              <td>Weapon</td>
+              <td>Ivory Sword, Dragon Killer, Manji-Kabura</td>
+            </tr>
+            <tr>
+              <td>Shield</td>
+              <td>Ivory Shield, Dragon Shield, Happy Shield, Basilisk Shield</td>
+            </tr>
+            <tr>
+              <td>Bracelet</td>
+              <td>No Control Bracelet (Shihan)</td>
+            </tr>
+            <tr>
+              <td>Scroll</td>
+              <td>Heaven Scroll, Earth Scroll, Identify Scroll</td>
+            </tr>
+            <tr>
+              <td>Pot</td>
+              <td>Storage Pot, Surprise Pot</td>
+            </tr>
+            <tr>
+              <td>Gitan</td>
+              <td>10~2000 Gitan</td>
+            </tr>
+            <tr>
+              <td>Treasure</td>
+              <td>Mijinha</td>
+            </tr>
+          </table>
+          <h2 id="floor_guide">High Score</h2>
+          Score = (Floor - 1) * 5000 + Gitan + Selling price of items in inventory + Clear Bonus (5000 for Road to the End)
+          <ul>
+            <li>Steal from shops and make as many 1,000,000 Gitan bags as you can.</li>
+            <li>Gather as many vouchers as you can from Traders to help with stealing or reselling at a profit.</li>
+            <li>Synthesize expensive equipment, such as Wonder Pick, Nirvana Shield, Daisangen, Helix Shield, etc.</li>
+            <ul>
+              <li>Dragon Killers can be obtained using an ally Armordillo or Iai monster inside a Golden Interval.</li>
+              <li>Pickaxes and Heavy Shields can be obtained using an ally Armordillo or Kengo family monster.</li>
+              <li>Dragon Tile Bracelets require many Restock Scrolls gathered using an Armordillo family monster.</li>
+              <li>Helix Shield is possible on paper, but Fuuma Shield is very rare, and it also needs to be<br>upgraded to +99, so it's not realistic to aim for it. That said, it might be a fun challenge.</li>
+              <li>Kaburasutegi and Fiery Fuuma require a blacksmith, so they cannot be synthesized in this dungeon.</li>
+            </ul>
+          </ul>
           <h2 id="floor_guide">Speed Running</h2>
-          <p>Text</p>
+          <ul>
+            <li>Healing Sword, Scout Bracelet, and Phantasm Bracelet are required.</li>
+            <ul>
+              <li>Unequip Phantasm Bracelet over water or inside a wall to warp to a different room.</li>
+            </ul>
+            <li>Shiren 2 doesn't have items that reveal where the stairs is, so you have to rely on intuition and luck.</li>
+            <ul>
+              <li>Wall Collapse Scrolls can be used, but a negative statue effect could lead to time loss or a collapse.</li>
+              <li>It's best to defeat monsters from inside walls and search for the stairs like normal.</li>
+            </ul>
+            <li>There's no time to upgrade equipment, so focus on seals instead of finding a good main weapon or shield.</li>
+            <ul>
+              <li>Sword: 回 (Healing Sword), 三 (Razor Wind), 弟 (Otogiriso)</li>
+              <li>Shield: 山 (Echo Shield), 皮 (Leather Shield), 見 (Evasive Shield)</li>
+            </ul>
+            <li>It's best to have 3 Extinction Scrolls. Use them in the order of Archdragon → Cranky Tank → Typhoon.</li>
+            <ul>
+              <li>These three monsters have long attack animations, leading to time loss.</li>
+              <li>Extinction Scrolls can only be found in shops, so you typically use Blank:Extinction scrolls.</li>
+              <li>Typhoon can quickly shatter Phantasm Bracelets, so have at least 1 scroll on hand proceeding to 86F.</li>
+              <li>If you don't have enough scrolls, skip using one on Archdragon, since it's often generated asleep.</li>
+            </ul>
+            <li>Use standard power up techniques between 20~30F so that you can rush through the second half smoothly.</li>
+            <ul>
+              <li>Phantasm Bracelet can cover the lack of defense, so focus on weapon seals and increasing strength.</li>
+            </ul>
+          </ul>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
