--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -30,92 +30,92 @@
                 <ul>
                   <li><a href="#weapon">Weapon</a></li>
                   <ul>
-                    <li><a href="#weapon">Main Weapon</a></li>
-                    <li><a href="#weapon">Recommended Seals</a></li>
+                    <li><a href="#main_weapon">Main Weapon</a></li>
+                    <li><a href="#weapon_seals">Recommended Seals</a></li>
                   </ul>
                   <li><a href="#shield">Shield</a></li>
                   <ul>
-                    <li><a href="#weapon">Main Shield</a></li>
-                    <li><a href="#weapon">Recommended Seals</a></li>
+                    <li><a href="#main_shield">Main Shield</a></li>
+                    <li><a href="#shield_seals">Recommended Seals</a></li>
                   </ul>
-                  <li><a href="#other">Bracelet</a></li>
-                  <li><a href="#other">Staff</a></li>
-                  <li><a href="#other">Scroll</a></li>
-                  <li><a href="#other">Grass</a></li>
-                  <li><a href="#other">Pot</a></li>
+                  <li><a href="#bracelet">Bracelet</a></li>
+                  <li><a href="#staff">Staff</a></li>
+                  <li><a href="#scroll">Scroll</a></li>
+                  <li><a href="#grass">Grass</a></li>
+                  <li><a href="#pot">Pot</a></li>
                 </ul>
-                <li><a href="#floor_guide">Identifying Items</a></li>
+                <li><a href="#identifying_items">Identifying Items</a></li>
                 <ul>
-                  <li><a href="#other">Weapon + Shield</a></li>
-                  <li><a href="#other">Bracelet</a></li>
-                  <li><a href="#other">Staff</a></li>
-                  <li><a href="#other">Scroll</a></li>
-                  <li><a href="#other">Grass</a></li>
-                  <li><a href="#other">Pot</a></li>
+                  <li><a href="#identify_equipment">Weapon + Shield</a></li>
+                  <li><a href="#identify_bracelet">Bracelet</a></li>
+                  <li><a href="#identify_staff">Staff</a></li>
+                  <li><a href="#identify_scroll">Scroll</a></li>
+                  <li><a href="#identify_grass">Grass</a></li>
+                  <li><a href="#identify_pot">Pot</a></li>
                 </ul>
                 <li><a href="#floor_guide">Floor Guide</a></li>
                 <ul>
-                  <li><a href="#waterfall_basin">01~04F</a></li>
+                  <li><a href="#1_4">01~04F</a></li>
                   <ul>
-                    <li><a href="#waterfall_basin">Basics</a></li>
-                    <li><a href="#waterfall_basin">Monsters</a></li>
-                    <li><a href="#waterfall_basin">Cave Mamel Hunting</a></li>
-                    <li><a href="#waterfall_basin">Items</a></li>
+                    <li><a href="#1_4_basics">Basics</a></li>
+                    <li><a href="#1_4_monsters">Monsters</a></li>
+                    <li><a href="#1_4_cave_mamel">Cave Mamel Hunting</a></li>
+                    <li><a href="#1_4_items">Items</a></li>
                   </ul>
-                  <li><a href="#mountain_cave">05~08F</a></li>
+                  <li><a href="#5_8">05~08F</a></li>
                   <ul>
-                    <li><a href="#waterfall_basin">Obtaining Items w/Armordillo Pop</a></li>
-                    <li><a href="#waterfall_basin">Obtaining Iron Arrows</a></li>
+                    <li><a href="#5_8_armordillo">Obtaining Items w/Armordillo Pop</a></li>
+                    <li><a href="#5_8_iron_arrows">Obtaining Iron Arrows</a></li>
                   </ul>
-                  <li><a href="#hoof_rock_wall">9~12F</a></li>
+                  <li><a href="#9_12">9~12F</a></li>
                   <ul>
-                    <li><a href="#waterfall_basin">Food Related (Nigiri Morph + Mixer)</a></li>
-                    <li><a href="#waterfall_basin">Monsters</a></li>
-                    <li><a href="#waterfall_basin">Other Tips</a></li>
+                    <li><a href="#9_12_food">Food Related (Nigiri Morph + Mixer)</a></li>
+                    <li><a href="#9_12_monsters">Monsters</a></li>
+                    <li><a href="#9_12_tips">Other Tips</a></li>
                   </ul>
-                  <li><a href="#galaha_fight">13~15F</a></li>
-                  <li><a href="#galaha_fight">16~21F</a></li>
+                  <li><a href="#13_15">13~15F</a></li>
+                  <li><a href="#16_21">16~21F</a></li>
                   <ul>
-                    <li><a href="#galaha_stats">Twisty Hani Hunting</a></li>
+                    <li><a href="#16_21_twisty_hani">Twisty Hani Hunting</a></li>
                   </ul>
-                  <li><a href="#hoof_rock_wall">22~29F</a></li>
+                  <li><a href="#22_29">22~29F</a></li>
                   <ul>
-                    <li><a href="#boss_oni_stats">Monsters (22~24F)</a></li>
-                    <li><a href="#boss_oni_stats">Monsters (25~29F)</a></li>
-                    <li><a href="#boss_oni_stats">Regarding the Golden Interval</a></li>
+                    <li><a href="#22_29_monsters_1">Monsters (22~24F)</a></li>
+                    <li><a href="#22_29_monsters_2">Monsters (25~29F)</a></li>
+                    <li><a href="#22_29_golden_interval">Regarding the Golden Interval</a></li>
                   </ul>
-                  <li><a href="#hoof_rock_wall">30~39F</a></li>
+                  <li><a href="#30_39">30~39F</a></li>
                   <ul>
-                    <li><a href="#boss_oni_stats">Monsters</a></li>
-                    <li><a href="#boss_oni_stats">Preparing for the Second Half</a></li>
+                    <li><a href="#30_39_monsters">Monsters</a></li>
+                    <li><a href="#30_39_second_half">Preparing for the Second Half</a></li>
                   </ul>
-                  <li><a href="#hoof_rock_wall">40~49F</a></li>
-                  <li><a href="#hoof_rock_wall">50~59F</a></li>
+                  <li><a href="#40_49">40~49F</a></li>
+                  <li><a href="#50_59">50~59F</a></li>
                   <ul>
-                    <li><a href="#boss_oni_stats">Monsters</a></li>
-                    <li><a href="#boss_oni_stats">Obtaining More Items</a></li>
-                    <li><a href="#boss_oni_stats">Mr. Drone Hunting</a></li>
+                    <li><a href="#50_59_monsters">Monsters</a></li>
+                    <li><a href="#50_59_items">Obtaining More Items</a></li>
+                    <li><a href="#50_59_mr_drone">Mr. Drone Hunting</a></li>
                   </ul>
-                  <li><a href="#hoof_rock_wall">60~69F</a></li>
-                  <li><a href="#hoof_rock_wall">70~85F</a></li>
-                  <li><a href="#hoof_rock_wall">86~99F</a></li>
+                  <li><a href="#60_69">60~69F</a></li>
+                  <li><a href="#70_85">70~85F</a></li>
+                  <li><a href="#86_99">86~99F</a></li>
                   <ul>
-                    <li><a href="#boss_oni_stats">86~90F</a></li>
-                    <li><a href="#boss_oni_stats">90F+</a></li>
+                    <li><a href="#86_90">86~90F</a></li>
+                    <li><a href="#90">90F+</a></li>
                   </ul>
-                  <li><a href="#hoof_rock_wall">The End</a></li>
+                  <li><a href="#end">The End</a></li>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
                 <ul>
-                  <li><a href="#monsters">Golden Interval</a></li>
+                  <li><a href="#monsters_golden_interval">Golden Interval</a></li>
                 </ul>
                 <li><a href="#items">Items</a></li>
                 <ul>
-                  <li><a href="#golden_interval">Shop + Trader</a></li>
+                  <li><a href="#shop_trader">Shop + Trader</a></li>
                 </ul>
                 <li><a href="#golden_interval">Golden Interval</a></li>
-                <li><a href="#golden_interval">High Score</a></li>
-                <li><a href="#golden_interval">Speed Running</a></li>
+                <li><a href="#high_score">High Score</a></li>
+                <li><a href="#speed_running">Speed Running</a></li>
               </ul>
             </div>
             <div class="dungeon_desc_table">
