update more links

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -55,59 +55,59 @@
                 </ul>
                 <li><a href="#floor_guide">Floor Guide</a></li>
                 <ul>
-                  <li><a href="#1_4">01~04F</a></li>
+                  <li><a href="#floor_1_4">01~04F</a></li>
                   <ul>
-                    <li><a href="#1_4_basics">Basics</a></li>
-                    <li><a href="#1_4_monsters">Monsters</a></li>
-                    <li><a href="#1_4_cave_mamel">Cave Mamel Hunting</a></li>
-                    <li><a href="#1_4_items">Items</a></li>
+                    <li><a href="#floor_1_4_basics">Basics</a></li>
+                    <li><a href="#floor_1_4_monsters">Monsters</a></li>
+                    <li><a href="#cave_mamel_hunting">Cave Mamel Hunting</a></li>
+                    <li><a href="#floor_1_4_items">Items</a></li>
                   </ul>
-                  <li><a href="#5_8">05~08F</a></li>
+                  <li><a href="#floor_5_8">05~08F</a></li>
                   <ul>
-                    <li><a href="#5_8_armordillo">Obtaining Items w/Armordillo Pop</a></li>
-                    <li><a href="#5_8_iron_arrows">Obtaining Iron Arrows</a></li>
+                    <li><a href="#floor_5_8_armordillo_items">Obtaining Items w/Armordillo Pop</a></li>
+                    <li><a href="#floor_5_8_arrows">Obtaining Iron Arrows</a></li>
                   </ul>
-                  <li><a href="#9_12">9~12F</a></li>
+                  <li><a href="#floor_9_12">9~12F</a></li>
                   <ul>
-                    <li><a href="#9_12_food">Food Related (Nigiri Morph + Mixer)</a></li>
-                    <li><a href="#9_12_monsters">Monsters</a></li>
-                    <li><a href="#9_12_tips">Other Tips</a></li>
+                    <li><a href="#floor_9_12_food">Food Related (Nigiri Morph + Mixer)</a></li>
+                    <li><a href="#floor_9_12_monsters">Monsters</a></li>
+                    <li><a href="#floor_9_12_other">Other Tips</a></li>
                   </ul>
-                  <li><a href="#13_15">13~15F</a></li>
-                  <li><a href="#16_21">16~21F</a></li>
+                  <li><a href="#floor_13_15">13~15F</a></li>
+                  <li><a href="#floor_16_21">16~21F</a></li>
                   <ul>
-                    <li><a href="#16_21_twisty_hani">Twisty Hani Hunting</a></li>
+                    <li><a href="#floor_16_21_twisty_hani">Twisty Hani Hunting</a></li>
                   </ul>
-                  <li><a href="#22_29">22~29F</a></li>
+                  <li><a href="#floor_22_29">22~29F</a></li>
                   <ul>
-                    <li><a href="#22_29_monsters_1">Monsters (22~24F)</a></li>
-                    <li><a href="#22_29_monsters_2">Monsters (25~29F)</a></li>
-                    <li><a href="#22_29_golden_interval">Regarding the Golden Interval</a></li>
+                    <li><a href="#floor_22_29_monsters_1">Monsters (22~24F)</a></li>
+                    <li><a href="#floor_22_29_monsters_2">Monsters (25~29F)</a></li>
+                    <li><a href="#floor_22_29_golden">Regarding the Golden Interval</a></li>
                   </ul>
-                  <li><a href="#30_39">30~39F</a></li>
+                  <li><a href="#floor_30_39">30~39F</a></li>
                   <ul>
-                    <li><a href="#30_39_monsters">Monsters</a></li>
-                    <li><a href="#30_39_second_half">Preparing for the Second Half</a></li>
+                    <li><a href="#floor_30_39_monsters">Monsters</a></li>
+                    <li><a href="#floor_30_39_preparing">Preparing for the Second Half</a></li>
                   </ul>
-                  <li><a href="#40_49">40~49F</a></li>
-                  <li><a href="#50_59">50~59F</a></li>
+                  <li><a href="#floor_40_49">40~49F</a></li>
+                  <li><a href="#floor_50_59">50~59F</a></li>
                   <ul>
-                    <li><a href="#50_59_monsters">Monsters</a></li>
-                    <li><a href="#50_59_items">Obtaining More Items</a></li>
-                    <li><a href="#50_59_mr_drone">Mr. Drone Hunting</a></li>
+                    <li><a href="#floor_50_59_monsters">Monsters</a></li>
+                    <li><a href="#floor_50_59_more_items">Obtaining More Items</a></li>
+                    <li><a href="#floor_50_59_mr_drone">Mr. Drone Hunting</a></li>
                   </ul>
-                  <li><a href="#60_69">60~69F</a></li>
-                  <li><a href="#70_85">70~85F</a></li>
-                  <li><a href="#86_99">86~99F</a></li>
+                  <li><a href="#floor_60_69">60~69F</a></li>
+                  <li><a href="#floor_70_85">70~85F</a></li>
+                  <li><a href="#floor_86_99">86~99F</a></li>
                   <ul>
-                    <li><a href="#86_90">86~90F</a></li>
-                    <li><a href="#90">90F+</a></li>
+                    <li><a href="#floor_86_90">86~90F</a></li>
+                    <li><a href="#floor_90">90F+</a></li>
                   </ul>
-                  <li><a href="#end">The End</a></li>
+                  <li><a href="#floor_end">The End</a></li>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
                 <ul>
-                  <li><a href="#monsters_golden_interval">Golden Interval</a></li>
+                  <li><a href="#monsters_golden">Golden Interval</a></li>
                 </ul>
                 <li><a href="#items">Items</a></li>
                 <ul>
@@ -218,7 +218,7 @@
           <p>Strength Grass, Boost Grass, and either Grass Gain Staff or Grass Toss Staff<br>can be used in combination to quickly increase Shiren's strength.<br>Strength plays a key role in damage calculation in Shiren 2, so it's important to increase it when possible.<br>Dealing more damage means you'll restore more HP per attack from Healing Sword (回 seal) as well.</p>
           <p>Shiren 2 doesn't have pots or scrolls that can restore HP, so it's important<br>to make use of Otogiriso and Revival Grass in ways that aren't wasteful.</p>
           <h3 id="weapon">Weapon</h3>
-          <h4>Main Weapon</h4>
+          <h4 id="main_weapon">Main Weapon</h4>
           <p>Ryujin Sword is the best possible main weapon, but you likely won't find four Dragon Killers<br>inside a Golden Interval without using Armordillo or Shihan to obtain more items.<br>Dragon Killer, Dotanuki, and Spark Sword are all good options. You can make up the lack of attack<br>by increasing your strength, so it's best to go for a weapon with many synthesis slots instead of raw stats.</p>
           <p>Mijinha is technically the strongest obtainable weapon,<br>but it's only available from 95F, so it's not practical to include it in the list.<br>Same with Daisangen Sword, since it's unrealistic to obtain 3 Dragon Seal Bracelets in a single run.</p>
           <table>
@@ -313,7 +313,7 @@
               <td>Effectively has 6 slots, and deals x1.5 damage to Ghost type monsters.</td>
             </tr>
           </table>
-          <h4>Recommended Seals</h4>
+          <h4 id="weapon_seals">Recommended Seals</h4>
           <p>The three key seals are 回 (Healing Sword), 三 (Razor Wind), and 飯 (Riceball).<br>After those three, you'll want to prioritize seals that increase your damage output.</p>
           <table>
             <tr>
@@ -390,7 +390,7 @@
             </tr>
           </table>
           <h3 id="shield">Shield</h3>
-          <h4>Main Shield</h4>
+          <h4 id="main_shield">Main Shield</h4>
           <p>Defense doesn't increase from level ups or strength, so the only way to increase it is to equip stronger shields.<br>The defense stat in Shiren 2 doesn't play as large of a role as other games in the series at reducing the amount<br>of damage you take, but despite that, it's still good to aim for high defense to reduce the damage as much as possible.</p>
           <p>Shields with high base defense are good for early game, since it's difficult to increase upgrade value at that point.<br>That said, Fuuma Shield, Ivory Shield, Leather Shield, and Walrus Shield are all good main shield options.<br>The shield you choose will likely come down to a mix of play style and whatever you happen to find.</p>
           <p>Basilisk Shield, Daisangen Shield, and Helix Shield aren't included in the list due to being impractical to obtain.</p>
@@ -477,7 +477,7 @@
               <td>Common shield with average defense and slots.<br>Easy to transition to a better shield later, since it doesn't have an innate seal.</td>
             </tr>
           </table>
-          <h4>Recommended Seals</h4>
+          <h4 id="shield_seals">Recommended Seals</h4>
           <p>The four key seals are 弟 (Otogiriso), 山 (Echo Shield), 皮 (Leather Shield), and ト (Walrus Shield).</p>
           <table>
             <tr>
@@ -565,7 +565,7 @@
               <td>Prevents the loss of upgrade value if you're using a shield other than Ivory Shield or Leather Shield.<br>Nice to have, since Monsoon Doll will erase a red 金 seal before other seals,<br>allowing you to protect against one use of Monsoon Doll's special attack.</td>
             </tr>
           </table>
-          <h3 id="other">Bracelet</h3>
+          <h3 id="bracelet">Bracelet</h3>
           <dl>
             <dt>Scout Bracelet</dt>
             <dd>Bracelet that drastically lowers the difficulty of the dungeon.<br>Allows you to see the locations of all monsters, items, and statues on the map.<br>Avoid walking while it's equipped, since you don't want it to crack from stepping on a trap.<br>If it cracks, be sure to read a Plating Scroll to repair it before it breaks.</dd>
@@ -580,7 +580,7 @@
             <dt>Dragon Tile Bracelet</dt>
             <dd>Rare bracelet that is exclusively found in shops between 2~29F.<br>Can be used with a Trip Stone to collect items, and is also an ingredient for synthesizing Daisangen equipment.</dd>
           </dl>
-          <h3 id="other">Staff</h3>
+          <h3 id="staff">Staff</h3>
           <dl>
             <dt>Grass Gain Staff</dt>
             <dd>Insert Strength Grass to increase max strength.<br>Other grasses like Angel Seed, Happy Grass, Life Grass, and Warp Grass can be used,<br>however Strength Grass should be prioritized, since strength is a large factor in Shiren 2's damage calculation.<br>To get one more use out of a "Strength Gain Staff[0]", throw it at a Tonosamadon to have it reflect the staff,<br>or use a Bend Bracelet and throw it at a wall so that it curves around and hits Shiren.<br>Don't forget to eat Boost Grass before swinging it to double the gains.</dd>
@@ -599,7 +599,7 @@
             <dt>Seal Staff</dt>
             <dd>Prevents a monster from being able to use their special attack.<br>Nice to have when facing Kengo family monsters, Monsoon Doll, Nigiri Manager, Tiger Chucker, etc.</dd>
           </dl>
-          <h3 id="other">Scroll</h3>
+          <h3 id="scroll">Scroll</h3>
           <dl>
             <dt>Blank Scroll</dt>
             <dd>One of the best items in the game. Can be used as any scroll you've read in the past, including Extinction Scroll.</dd>
@@ -624,7 +624,7 @@
             <dt>Escape Scroll</dt>
             <dd>Found on the ground on 30F, 50F, and 70F. However, there's no point in carrying it around if you're aiming for 99F.<br>That said, it can be nice to have on hand in case you find rare items like a Dragon Tile Bracelet or Upgrade Pot.</dd>
           </dl>
-          <h3 id="other">Grass</h3>
+          <h3 id="grass">Grass</h3>
           <dl>
             <dt>Revival Grass</dt>
             <dd>Fully restores HP, strength, and fullness if you collapse. No effect when it's inside a pot.<br>Sometimes dropped by Mr. Gyro. Shiren 2 lacks items that fully restore HP, so stock up on as many as possible.<br>You don't want to waste these, so don't let your guard down or get careless just because you have this in your inventory.</dd>
@@ -649,7 +649,7 @@
             <dt>Sight Grass</dt>
             <dd>Best to eat it at the beginning of a floor.<br>Use it on 9F to look for a Poison Arrow Trap, which can be used to lower Nigiri Morph's strength and obtain riceballs.<br>Can also be used to look for Pitfalls, or a Trip Stone if you have a Dragon Tile Bracelet and want to collect items.</dd>
           </dl>
-          <h3 id="other">Pot</h3>
+          <h3 id="pot">Pot</h3>
           <dl>
             <dt>Storage Pot</dt>
             <dd>One of the most important items in the game, since it lets you expand your inventory.<br>Easily identified by looking inside a pot and checking for a sound effect by pressing the L button.</dd>
@@ -666,13 +666,13 @@
             <dt>Upgrade Pot</dt>
             <dd>Incredibly rare item that can only be found in shops between 71~90F.<br>Stock up on Restock and Blank scrolls using an Armordillo Pop if you want to try to obtain one,<br>but it's common to go through 20 Restock Scrolls and still not see it, so you'll likely need to make multiple trips.</dd>
           </dl>
-          <h2 id="important_items">Identifying Items</h2>
+          <h2 id="identifying_items">Identifying Items</h2>
           <p>Most items inside this dungeon are found unidentified, so it's important to learn how to<br>identify using techniques rather than solely relying on items like Identify Pot and Identify Scroll.<br>You can compare prices, check for specific effects, or narrow down possibilities based on what you've found.<br>The only items that are found in an identified state are projectiles, riceballs, Blank Scroll, and Escape Scroll.</p>
-          <h3 id="weapon">Weapon + Shield</h3>
+          <h3 id="identify_equipment">Weapon + Shield</h3>
           <p>The name is already identified, but you won't know if it's cursed until you either equip it or fully identify it.<br>So it's best to wait to equip a weapon or shield until you find a Strip Trap, or until you reach a floor<br>where Kengo family monsters can be found.</p>
           <p>You can also check for curses or upgrade values by comparing prices inside a shop.<br>If the selling price is higher than the listed price, it has a positive upgrade value,<br>but if it's lower, it's either cursed or has a negative upgrade value.</p>
           <p>See the <a href="">Price Chart</a> page for weapon and shield prices.</p>
-          <h3 id="other">Bracelet</h3>
+          <h3 id="identify_bracelet">Bracelet</h3>
           <dl>
             <dt>Price Identification</dt>
           </dl>
@@ -967,11 +967,11 @@
               <td>Damage toward Shiren was redirected to a different enemy.</td>
             </tr>
           </table>
-          <h3 id="other">Staff</h3>
+          <h3 id="identify_staff">Staff</h3>
           <p>Staves can be used to escape tricky situations, so identify them whenever you're able to do so.<br>It's best to swing them at a level 2 monster at least 2 tiles away so that you can<br>differentiate between Unlucky Staff, Quarter Staff, and Pull Staff.<br>It's also good to swing staves near the stairs so that you can run away if it happened to be a Happy Staff.</p>
           <p>A staff with the [Insert] menu option is either a Grass Toss Staff or Grass Gain Staff.<br>It's difficult to tell them apart, but Grass Gain Staff costs slightly more than Grass Toss Staff,<br>so you can try to identify which one it is by checking the price inside of a shop.<br>It's best to fully identify it before wasting one of its uses.</p>
           <p>See the <a href="">Price Chart</a> page for staff prices.</p>
-          <h3 id="other">Scroll</h3>
+          <h3 id="identify_scroll">Scroll</h3>
           <p>Shiren 2 doesn't have the negative effect scrolls like making you unable to pick up items<br>or increasing enemy movement speed which can be seen in some of the other games in the series.<br>However, you might find yourself surrounded by monsters if it happened to be a Wall Collapse Scroll,<br>so it's best to read scrolls after you've explored the current floor and have defeated some monsters.</p>
           <p>Wait until 9F to read unidentified scrolls in case you get lucky with a Wall Collapse Scroll and find a Golden Stairs.<br>If you find a shop, go ahead and read scrolls that aren't in the price range of a Wall Collapse Scroll.<br>Though you may want to keep 500G and 1000G scrolls on hand in case you run into a Monster House.</p>
           <p>Note that Explosion and Sanctuary scrolls will stick to the ground if you check prices by placing them on the floor.<br>Place a Storage Pot down, check its price, and then insert a scroll and subtract the Pot's price if you want to be safe.</p>
@@ -1223,7 +1223,7 @@
             </tr>
           </table>
           <p class="dungeon_table_notes">* Escape Scrolls are always found identified, and only appear on 30F, 50F, and 70F.</p>
-          <h3 id="other">Grass</h3>
+          <h3 id="identify_grass">Grass</h3>
           <p>Typically identified by checking prices inside a shop.</p>
           <p>Mr. Drone family monsters will always drop the following grasses:<br>Mr. Drone = Strength Grass, Mr. Helico = Happy Grass, Mr. Gyro = Revival Grass.</p>
           <p>Revival Grass will activate even if it's in an unidentified state, as long as it's not inside a pot.</p>
@@ -1341,7 +1341,7 @@
               <td>1500</td>
             </tr>
           </table>
-          <h3 id="other">Pot</h3>
+          <h3 id="identify_pot">Pot</h3>
           <p>Typically identified by checking prices inside a shop.<br>There are only 6 pots that cannot be identified after picking them up.</p>
           <p>If you don't want to wait for a shop to identify them:</p>
           <ul>
@@ -4373,7 +4373,7 @@
               Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
             </p>
           </div>
-          <h3>Golden Interval</h3>
+          <h3 id="monsters_golden">Golden Interval</h3>
           <div class="road_to_the_end_monster_table_gold">
           <h4>First (6~10F, Return 11F)</h4>
             <table>
@@ -5754,7 +5754,7 @@
               </li>
             </ul>
           </div>
-          <h3>Shop + Trader</h3>
+          <h3 id="shop_trader">Shop + Trader</h3>
           <p class="dungeon_table_notes">
             The following items have only been seen on certain floor ranges.
           </p>
@@ -6197,7 +6197,7 @@
               <td>Mijinha</td>
             </tr>
           </table>
-          <h2 id="floor_guide">High Score</h2>
+          <h2 id="high_score">High Score</h2>
           Score = (Floor - 1) * 5000 + Gitan + Selling price of items in inventory + Clear Bonus (5000 for Road to the End)
           <ul>
             <li>Steal from shops and make as many 1,000,000 Gitan bags as you can.</li>
@@ -6211,7 +6211,7 @@
               <li>Kaburasutegi and Fiery Fuuma require a blacksmith, so they cannot be synthesized in this dungeon.</li>
             </ul>
           </ul>
-          <h2 id="floor_guide">Speed Running</h2>
+          <h2 id="speed_running">Speed Running</h2>
           <ul>
             <li>Healing Sword, Scout Bracelet, and Phantasm Bracelet are required.</li>
             <ul>
