--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -6050,7 +6050,7 @@
               </tr>
             </table>
           </div>
-          <h2 id="floor_guide">Golden Interval</h2>
+          <h2 id="golden_interval">Golden Interval</h2>
           <dl>
             <dt>Notes that apply to all three Golden Intervals</dt>
           </dl>
